# cplusplus-binding-examples

./: Makefile  README  example.cabal
example-perl/: Changes  MANIFEST  Makefile.PL  Makefile.old  README  Test.xs  const-c.inc  const-xs.inc  typemap
example-perl/fallback/: const-c.inc
example-perl/lib/: Test.pm
example-perl/t/: Test.t
examplehs/: Test.hs  example.hs
examplehs/Test/: Internal.hs
libexample/: Makefile  main.c  test.cpp  test.h
libexample++/: Makefile  main.cpp  test.cpp  test.hpp
